--- a/codenames3-model/pom.xml
+++ b/codenames3-model/pom.xml
@@ -7,4 +7,11 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
+	<dependencies>
+			<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.4.0.Final</version>
+</dependency>
+</dependencies>
 </project>
