--- a/codenames3-dao/pom.xml
+++ b/codenames3-dao/pom.xml
@@ -13,5 +13,11 @@
   		<artifactId>codenames3-model</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.13</version>
+			<scope>runtime</scope>
+		</dependency>
   </dependencies>
 </project>
