--- a/codenames3-model/pom.xml
+++ b/codenames3-model/pom.xml
@@ -16,6 +16,11 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>6.0.11.Final</version>
 		</dependency>
+		<dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>1.11</version>
+</dependency>
 	</dependencies>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
