--- a/codenames3-java/pom.xml
+++ b/codenames3-java/pom.xml
@@ -13,7 +13,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>fr.codenames</groupId>
-			<artifactId>codenames3-dao</artifactId>
+			<artifactId>codenames3-data-jpa</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
