--- a/codenames3-data-jpa/src/main/ressources/data-source.properties
+++ b/codenames3-data-jpa/src/main/ressources/data-source.properties
@@ -2,3 +2,4 @@ sql.url = jdbc:mysql://localhost:3306/codenames_db?serverTimezone=UTC
 sql.driver = com.mysql.jdbc.Driver
 sql.user = root
 sql.password =
+sql.maxTotal = 10
