--- a/codenames3-java/pom.xml
+++ b/codenames3-java/pom.xml
@@ -12,6 +12,19 @@
 	</properties>
 	<dependencies>
 		<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-test</artifactId>
+    <version>5.0.8.RELEASE</version>
+    <scope>test</scope>
+</dependency>
+
+			<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>fr.codenames</groupId>
 			<artifactId>codenames3-data-jpa</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
