--- a/codenamesSpringBoot/pom.xml
+++ b/codenamesSpringBoot/pom.xml
@@ -56,6 +56,11 @@
 			<artifactId>codenames3-model</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+			
+		</dependency>
 	</dependencies>
 
 	<build>
