--- a/codenames3-data-jpa/src/main/ressources/data-source.properties
+++ b/codenames3-data-jpa/src/main/ressources/data-source.properties
@@ -1,4 +1,4 @@
-sql.url = jdbc:mysql://localhost:3306/codenames_db?serverTimezone=UTC
+sql.url = jdbc:mysql://192.168.1.103:3306/codenames_db?serverTimezone=UTC
 sql.driver = com.mysql.jdbc.Driver
 sql.user = root
 sql.password =
