couleur des cases cachée

--- a/codenamesSpringBoot/src/main/resources/application.properties
+++ b/codenamesSpringBoot/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Informations de connexion
-spring.datasource.url = jdbc:mysql://localhost:3306/codenames_db?serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://192.168.1.103:3306/codenames_db?serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password =
 # Afficher les requêtes SQL
